corrected image overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -52,6 +52,7 @@ body {
   background-color: $portfolio-blue;
   padding: 3em;
   margin-top: 2em;
+  height: auto;
 }
 
 #projects {
